# bidirected-adjacency-array

./: Cargo.toml
src/: compare.rs  graph.rs  index.rs  io.rs  lib.rs  random.rs
src/graph/: tests.rs
src/io/: gfa1.rs
src/io/gfa1/: tests.rs
