[package]
name = "bidirected-adjacency-array"
description = "Represent a bidirected graph via an adjacency array."
version = "0.1.0"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
license = "BSD-2-Clause"
repository = "https://github.com/sebschmi/bidirected-adjacency-array"

edition = "2024"

[features]
# Generate random graphs
random = ["dep:rand"]

[dependencies]
num-traits = "0.2.19"
optional-numeric-index = "0.3.1"
tagged-vec = "0.4.1"
thiserror = "2.0.18"
log = "0.4.29"

# Generate random graphs
rand = { version = "0.9.2", optional = true }
